package com.idlerpg.command;

public interface GameCommand {
    void execute();
}
