package com.idlerpg.domain.common;

public interface Identifiable {
    String id();
}
